--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "medusa-interfaces": "latest",
     "medusa-payment-manual": "latest",
     "medusa-payment-stripe": "latest",
+    "minio": "^8.0.0",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
@@ -57,6 +58,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/mime": "1.3.5",
+    "@types/minio": "^7.1.1",
     "@types/node": "^17.0.8",
     "babel-preset-medusa-package": "^1.1.19",
     "cross-env": "^7.0.3",
